# pathtriage

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
attacks/01_passrole/: README.md  exploit.py  iteration_notes.md  verification_log.txt
attacks/02_imds_ssrf/: README.md  exploit.py  verification_log.txt
attacks/03_createpolicyversion/: README.md  exploit.py  verification_log.txt
attacks/04_assume_role_chain/: README.md  exploit.py  verification_log.txt
attacks/05_attachpolicy/: README.md  exploit.py  verification_log.txt
attacks/06_instance_profile/: README.md  exploit.py  verification_log.txt
attacks/07_lambda_env_theft/: README.md  exploit.py  verification_log.txt
attacks/08_s3_credential_harvest/: README.md  exploit.py  verification_log.txt
docs/: decision_log.md  project_arc.md
environments/baseline/: main.tf  outputs.tf  variables.tf
environments/scenarios/01_passrole/: main.tf  outputs.tf  variables.tf
environments/scenarios/02_imds_ssrf/: main.tf  outputs.tf  user_data.sh  variables.tf
environments/scenarios/03_createpolicyversion/: main.tf  outputs.tf  variables.tf
environments/scenarios/04_assume_role_chain/: main.tf  outputs.tf
environments/scenarios/05_attachpolicy/: main.tf  outputs.tf
environments/scenarios/06_instance_profile/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
environments/scenarios/07_lambda_env_theft/: .terraform.lock.hcl  main.tf  outputs.tf
pathtriage/: __init__.py
pathtriage/cli/: main.py
pathtriage/enumerators/: aws.py
pathtriage/graph/: builder.py
(+3 files in other folders)
