[project]
name = "pathtriage"
version = "0.1.0"
description = "Exploitability-ranked IAM attack-path discovery for AWS and Azure"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
    "networkx>=3.2",
]

[project.scripts]
pathtriage = "pathtriage.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pathtriage*"]
